--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://plus.unsplash.com/premium_photo-1661675440353-6a6019c95bc7?w=1200&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bW92aWV8ZW58MHx8MHx8fDA%3D);">
+<div class="banner d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://plus.unsplash.com/premium_photo-1661675440353-6a6019c95bc7?w=1200&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bW92aWV8ZW58MHx8MHx8fDA%3D);">
   <div class="container">
     <h1><strong>Save any kind of movies</strong></h1>
     <p>Classic</p>
@@ -8,7 +8,7 @@
 <div class="container mt-5 mb-5">
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name %>
-    <%= f.input :list_url, placeholder: 'http://some-image.jpg' %>
+    <%= f.input :list_url, label: "Fournissez une url vers une image", placeholder: 'http://some-image.jpg' %>
     <%= f.submit %>
   <% end %>
 </div>
